[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "counter_bot"
version = "0.0.6"
authors = [
    { name="Egor Knyazev", email="egorknyazev@mail.ru" },
]
description = "Simple bot for counting everything."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: Flask",
]
dependencies = [
    "PyTelegramBotApi",
    "flask",
]

[project.urls]
Repository = "https://github.com/KH9IZ/counter_bot"

[tools.setuptool.packages.find]
exclude = ["counter_bot.tests"]
namespaces = false
